<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="all_video">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Player</string>
    <string name="total_folders">Total Videos</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>





    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading...</string>
    <string name="semi_color">:</string>

    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="lock_open">Lock touch</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="fullscreen">Fullsreen</string>
    <string name="play">Play</string>
    <string name="orientation">Change orientation</string>

    //Menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="apply_to_all">Aplly to all</string>
    <string name="search">Search</string>



    //More video features
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="info">Details</string>
    <string name="share">Share</string>
    <string name="O">0</string>
    <string name="navText1">Nhóm 19</string>
</resources>