<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="#42000000"
    >
  <LinearLayout
      android:id="@+id/topController"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#42000000"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back_icon"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/videoTilte"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/video_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/moreFeaturesBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/menu"
        android:padding="10dp"
        android:src="@drawable/menu_icon"
        app:tint="@color/white" />
  </LinearLayout>



  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <FrameLayout
        android:id="@+id/backwardFrameBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1">

      <ImageButton
          android:id="@+id/backwardButton"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_gravity="center"
          android:background="@android:color/transparent"
          android:clickable="false"
          android:contentDescription="@string/play"
          android:src="@drawable/backward_icon"
          android:visibility="gone"
          app:tint="@color/white" />
    </FrameLayout>


    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play"
        android:focusable="true"
        android:src="@drawable/play_icon"
        app:tint="@color/white" />


    <FrameLayout
        android:id="@+id/forwardFrameBtn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1">

      <ImageButton
          android:id="@+id/forwardButton"
          android:layout_width="40dp"
          android:layout_height="40dp"
          android:layout_gravity="center"
          android:background="@android:color/transparent"
          android:clickable="false"
          android:contentDescription="@string/play"
          android:src="@drawable/forward_icon"
          android:visibility="gone"
          app:tint="@color/white" />
    </FrameLayout>

  </LinearLayout>

  <!--Bottom Controller-->
  <LinearLayout
      android:id="@+id/bottomController"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:orientation="horizontal"
      android:gravity="end|bottom"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">
    <ImageButton
        android:id="@+id/orientationButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/orientation_icon"
        android:backgroundTint="@android:color/transparent"
        app:tint="@color/white"
        android:contentDescription="@string/orientation"
        />
    <ImageButton
        android:id="@+id/repeatButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/exo_icon_repeat_off"
        android:backgroundTint="@android:color/transparent"
        app:tint="@color/white"
        android:contentDescription="@string/repeat"
        />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/previous_icon"
        app:tint="@color/white"
        android:contentDescription="@string/previous" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/next_icon"
        app:tint="@color/white"
        android:contentDescription="@string/next" />

    <ImageButton
        android:id="@+id/fullscreenButton"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/fullscreen_icon"
        app:tint="@color/white"
        android:padding="5dp"
        android:contentDescription="@string/fullscreen" />
  </LinearLayout>

  <com.google.android.exoplayer2.ui.DefaultTimeBar
      android:id="@+id/exo_progress"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="5dp"
      android:layout_marginBottom="40dp"
      app:buffered_color="#80FFFFFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.444"
      app:layout_constraintStart_toStartOf="parent"
      app:played_color="@color/white"
      app:scrubber_color="@color/white"
      app:scrubber_disabled_size="5dp"
      app:scrubber_enabled_size="15dp"
      app:unplayed_color="#80FFFFFF" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="@+id/bottomController"
      app:layout_constraintEnd_toEndOf="@+id/bottomController"
      app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@id/exo_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/duration"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/semi_color"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


    <TextView
        android:id="@id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
