<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="15dp"
    android:backgroundTint="?attr/themeColor"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:id="@+id/videoImg"
        android:contentDescription="@string/image"
        android:src="@drawable/icon_video_player"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_margin="5dp"

        />

        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:text="@string/video_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:maxLines="1"
            android:layout_marginStart="100dp"
            android:paddingHorizontal="5dp"
            android:layout_marginEnd="60dp"

            />

        <TextView
            android:id="@+id/folderName"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/folder_name"
            android:maxLines="1"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:layout_marginStart="100dp"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="5dp"
            android:layout_marginEnd="60dp"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:text="@string/duration"
        android:gravity="center"
        android:layout_gravity="end"
        android:textSize="15sp"
        />
</com.google.android.material.card.MaterialCardView>
